--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Food Organizer</title>
     <meta charset="UTF-8" />
+    <meta name="author" content="Hritik Aggarwal" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe App</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +13,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Food Organizer" />
+    <meta property="og:title" content="Food Organizer" />
+    <meta property="og:description" content="Cook and share recipes" />
+
+    <meta
+      name="description"
+      content="Cook your favorite recipes. Share them with friends and family. And keep track of your pantry"
+    />
+    <meta name="”robots”" content="”index,follow”" />
+    <meta name="google-site-verification" content="SAYrfktHuKlD-T3molZPE1gt8vvMVmBsr4YTFfmNR30" />
   </head>
   <body>
     <div class="background">
